--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3.8"
+    "python.pythonPath": "/home/moringa/mc34/python track 34/pitch12/virtual/bin/python3.8"
 }
